2048-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "frontend-deployment"
  namespace: "2048-game"
spec:
  selector:
    matchLabels:
      app: "frontend"
  replicas: 1
  template:
    metadata:
      labels:
        app: "frontend"
    spec:
      containers:
      - image: 764553891844.dkr.ecr.ap-south-2.amazonaws.com/sanket-dev:3
        imagePullPolicy: Always
        name: "frontend"
        ports:
        - containerPort: 80
